# vscode-cpu-load

./: .editorconfig  pyproject.toml
vscode_cpu_load/: __init__.py  __main__.py
