[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vscode-cpu-load"
version = "0"
description = "Test"
authors = ["Test <test@example.com>"]
license = "Proprietary"

# Plugin to automatically set the package version from __init__.py
[tool.poetry-version-plugin]
source = "init"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
